--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ selenium-wire
 fastapi
 uvicorn
 beautifulsoup4
-lxml
+lxml==4.8.0.0
 pyyaml
 opencv-python
 requests
+pyOpenSSL==22.0.0
+cryptography==36.0.2
